<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="G_Parameter" Id="{6529201b-0264-4389-a4a9-6a2e97edbca5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bEnablePID : SINT := 0;
	bEnableU : SINT := 0;	
	
	Kp : LREAL := 2.0;
	Ki : LREAL := 0.0;
	Kd : LREAL := 0.0;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>